--- a/4-Exploratory-data-analysis.qmd
+++ b/4-Exploratory-data-analysis.qmd
@@ -299,7 +299,7 @@ str(churnCredit)
 
 Once the data are clean and variables properly defined, the dataset is ready for exploratory analysis. Throughout this section, we use the cleaned version of the dataset. The next section applies summary statistics and visualization techniques to uncover key patterns and relationships underlying customer churn.
 
-## Exploring Categorical Features {#sec-chapter-EDA-categorical}
+## Exploring Categorical Features {#sec-EDA-categorical}
 
 Categorical variables group observations into distinct classes that often reflect demographic or behavioural characteristics. In the *churnCredit* dataset, the key categorical features include `gender`, `education`, `marital`, `card.category`, and `churn`. Examining how these variables are distributed, and how they relate to the outcome `churn`, provides early clues about customer loyalty and disengagement.
 
@@ -383,11 +383,11 @@ Credit card type is one of the most informative service features in the *churnCr
 
 ggplot(data = churnCredit) + 
   geom_bar(aes(x = card.category, fill = churn)) + 
-  labs(x = "Card Category", y = "Count", fill = "Churn")
+  labs(x = "Card Category", y = "Count")
 
 ggplot(data = churnCredit) + 
   geom_bar(aes(x = card.category, fill = churn), position = "fill") + 
-  labs(x = "Card Category", y = "Proportion", fill = "Churn")
+  labs(x = "Card Category", y = "Proportion")
 ```
 
 The left plot shows the absolute number of churners and non-churners within each tier, while the right plot presents proportions within card categories. The distribution is highly imbalanced: more than 93 percent of customers hold a blue card, which is typically the entry-level or no-fee version. This reflects real-world product portfolios, where most clients hold standard cards. Because the remaining groups are small, differences across tiers must be interpreted cautiously.
@@ -414,12 +414,12 @@ Income level reflects purchasing power and financial stability, both of which ma
 
 ggplot(data = churnCredit) + 
   geom_bar(aes(x = income, fill = churn)) + 
-  labs(x = "Annual Income Bracket", y = "Count", fill = "Churn") +
+  labs(x = "Annual Income Bracket", y = "Count") +
   theme(axis.text.x = element_text(angle = 45, hjust = 1))
 
 ggplot(data = churnCredit) + 
   geom_bar(aes(x = income, fill = churn), position = "fill") + 
-  labs(x = "Annual Income Bracket", y = "Proportion", fill = "Churn") +
+  labs(x = "Annual Income Bracket", y = "Proportion") +
   theme(axis.text.x = element_text(angle = 45, hjust = 1))
 ```
 
@@ -445,11 +445,11 @@ Marital status may influence financial behaviour and account management, making 
 
 ggplot(data = churnCredit) + 
   geom_bar(aes(x = marital, fill = churn)) + 
-  labs(x = "Marital Status", y = "Count", fill = "Churn")
+  labs(x = "Marital Status", y = "Count")
 
 ggplot(data = churnCredit) + 
   geom_bar(aes(x = marital, fill = churn), position = "fill") + 
-  labs(x = "Marital Status", y = "Proportion", fill = "Churn")
+  labs(x = "Marital Status", y = "Proportion")
 ```
 
 The bar plots show that single customers churn slightly more often than married or divorced customers. The differences, however, are relatively small and may not be practically significant.
@@ -489,11 +489,12 @@ The *churnCredit* dataset contains fourteen numerical variables that describe di
 
 To keep the analysis focused and interpretable, we examine five representative numerical features that capture key behavioral and financial dimensions of customer retention:
 
-1. `contacts.count.12`: number of customer service contacts in the past 12 months, reflecting engagement and potential dissatisfaction  
-2. `transaction.amount.12`: total amount spent during the past 12 months, representing spending activity  
-3. `credit.limit`: total credit line assigned to each customer, indicating financial capacity  
-4. `months.on.book`: number of months the customer has held the account, representing relationship duration  
-5. `ratio.amount.Q4.Q1`: ratio of total transaction amount in the fourth quarter to that in the first quarter, capturing changes in spending behavior over time  
+1. `contacts.count.12`: number of customer service contacts in the past 12 months, reflecting engagement and potential dissatisfaction;  
+2. `transaction.amount.12`: total amount spent during the past 12 months, representing spending activity;  
+3. `credit.limit`: total credit line assigned to each customer, indicating financial capacity;  
+4. `months.on.book`: number of months the customer has held the account, representing relationship duration;  
+5. `ratio.amount.Q4.Q1`: ratio of total transaction amount in the fourth quarter to that in the first quarter, capturing changes in spending behavior over time.   
+
 Together, these variables provide a comprehensive view of customer interaction, engagement, credit strength, tenure, and behavioral change. After examining these features individually, the subsection *Assessing Correlation and Redundancy* explores how numerical variables relate to one another and identifies potential overlaps. This step ensures that later models are based on distinct, non-redundant predictors that contribute meaningfully to churn analysis.
 
 ### Customer Contacts and Churn {.unnumbered}
@@ -507,11 +508,11 @@ The number of customer service contacts within the past year (`contacts.count.12
 
 ggplot(data = churnCredit) +
   geom_bar(aes(x = factor(contacts.count.12), fill = churn)) +
-  labs(x = "Number of Contacts in Past 12 Months", y = "Count", fill = "Churn")
+  labs(x = "Number of Contacts in Past 12 Months", y = "Count")
 
 ggplot(data = churnCredit) +
   geom_bar(aes(x = factor(contacts.count.12), fill = churn), position = "fill") +
-  labs(x = "Number of Contacts in Past 12 Months", y = "Proportion", fill = "Churn")
+  labs(x = "Number of Contacts in Past 12 Months", y = "Proportion")
 ```
 
 The bar plots show that churn rates increase among customers who contacted customer service more frequently, particularly those with four or more interactions within the year. This pattern suggests that repeated service contacts may reflect dissatisfaction or unresolved issues.
@@ -530,12 +531,13 @@ Unlike count-based variables such as `contacts.count.12`, `transaction.amount.12
 #| fig-height: 4
 
 ggplot(data = churnCredit) +
-  geom_boxplot(aes(x = churn, y = transaction.amount.12), fill = c("#F4A582", "#A8D5BA")) +
+  geom_boxplot(aes(x = churn, y = transaction.amount.12), 
+               fill = c("#F4A582", "#A8D5BA")) +
   labs(x = "Churn", y = "Total Transaction Amount (12 months)")
 
 ggplot(data = churnCredit) +
   geom_density(aes(x = transaction.amount.12, fill = churn), alpha = 0.6) +
-  labs(x = "Total Transaction Amount (12 months)", y = "Density", fill = "Churn")
+  labs(x = "Total Transaction Amount (12 months)", y = "Density")
 ```
 
 Both plots reveal a clear distinction between churners and non-churners. Customers who churn tend to have significantly lower total transaction amounts, indicating reduced engagement with the credit card over the preceding year. In contrast, customers who remain active generally show higher and more varied transaction volumes.
@@ -559,7 +561,7 @@ ggplot(data = churnCredit, aes(x = churn, y = credit.limit, fill = churn)) +
 
 ggplot(data = churnCredit) +
   geom_histogram(aes(x = credit.limit, fill = churn)) +
-  labs(x = "Credit Limit", y = "Count", fill = "Churn")
+  labs(x = "Credit Limit", y = "Count")
 ```
 
 Both plots show that customers who churn tend to have lower credit limits compared to those who remain active. The distribution for non-churners is more dispersed and shifted toward higher values, suggesting that customers with greater financial capacity are less inclined to close their accounts.
@@ -577,13 +579,13 @@ The variable `months.on.book` measures the length of time a customer has maintai
 
 ggplot(data = churnCredit, aes(x = churn, y = months.on.book, fill = churn)) +
   geom_violin(alpha = 0.5, trim = TRUE) +
-  geom_boxplot(width = 0.15, fill = "white", outlier.shape = NA, color = "black") +
+  geom_boxplot(width = 0.15, fill = "white", outlier.shape = NA) +
   labs(x = "Churn", y = "Months on Book") +
   theme(legend.position = "none")
 
 ggplot(data = churnCredit) +
   geom_histogram(aes(x = months.on.book, fill = churn), bins = 20) +
-  labs(x = "Months on Book", y = "Density", fill = "Churn")
+  labs(x = "Months on Book", y = "Density")
 ```
 
 Both plots suggest that customers who churn tend to have slightly shorter tenures than those who remain active. Although the difference is not large, it is consistent: the median tenure of churners is a few months lower. The noticeable peak around 36 months reflects a cohort effect, likely linked to a major customer acquisition campaign that occurred three years before the observation period.
@@ -600,12 +602,13 @@ The variable `ratio.amount.Q4.Q1` measures the ratio between the total transacti
 #| fig-height: 4
 
 ggplot(data = churnCredit) +
-  geom_boxplot(aes(x = churn, y = ratio.amount.Q4.Q1), fill = c("#F4A582", "#A8D5BA")) +
+  geom_boxplot(aes(x = churn, y = ratio.amount.Q4.Q1), 
+               fill = c("#F4A582", "#A8D5BA")) +
   labs(x = "Churn", y = "Transaction Amount Ratio (Q4/Q1)")
 
 ggplot(data = churnCredit) +
   geom_density(aes(x = ratio.amount.Q4.Q1, fill = churn), alpha = 0.6) +
-  labs(x = "Transaction Amount Ratio (Q4/Q1)", y = "Density", fill = "Churn")
+  labs(x = "Transaction Amount Ratio (Q4/Q1)", y = "Density")
 ```
 
 The plots reveal that customers who churn tend to have lower Q4-to-Q1 ratios, indicating a reduction in spending toward the end of the year. In contrast, customers who remain active typically maintain or slightly increase their transaction volumes between the two periods.
@@ -639,10 +642,11 @@ Returning to the *churnCredit* dataset, we compute and visualize the correlation
 ```{r, out.width = "100%"}
 library(ggcorrplot)
 
-numeric_features = c("age", "dependent.count", "months.on.book", "relationship.count", 
-                     "months.inactive", "contacts.count.12", "credit.limit", 
-                     "revolving.balance", "available.credit", "transaction.amount.12", 
-                     "transaction.count.12", "ratio.amount.Q4.Q1", "ratio.count.Q4.Q1", "utilization.ratio")
+numeric_features = c("age", "dependent.count", "months.on.book", 
+             "relationship.count", "months.inactive", "contacts.count.12", 
+             "credit.limit", "revolving.balance", "available.credit", 
+             "transaction.amount.12", "transaction.count.12", 
+             "ratio.amount.Q4.Q1", "ratio.count.Q4.Q1", "utilization.ratio")
 
 cor_matrix = cor(churnCredit[, numeric_features])
 
@@ -663,7 +667,8 @@ ggplot(data = churnCredit) +
     labs(x = "Credit Limit", y = "Available Credit")
 
 ggplot(data = churnCredit) +
-    geom_point(aes(x = credit.limit - revolving.balance, y = available.credit), size = 0.1) +
+    geom_point(aes(x = credit.limit - revolving.balance, 
+                   y = available.credit), size = 0.1) +
     labs(x = "Credit Limit - Revolving Balance", y = "Available Credit")
 ```
 
@@ -681,7 +686,8 @@ ggplot(data = churnCredit) +
     labs(x = "Credit Limit", y = "Utilization Ratio")
 
 ggplot(data = churnCredit) +
-    geom_point(aes(x = revolving.balance/credit.limit, y = utilization.ratio), size = 0.1) +
+    geom_point(aes(x = revolving.balance/credit.limit, 
+                   y = utilization.ratio), size = 0.1) +
     labs(x = "Revolving Balance / Credit Limit", y = "Utilization Ratio")
 ```
 
@@ -717,20 +723,17 @@ Transaction activity has two important dimensions: how much customers spend and 
 
 ```{r out.width = "85%"}
 ggplot(data = churnCredit) +
-  geom_point(aes(x = transaction.amount.12, 
-                 y = transaction.count.12, 
+  geom_point(aes(x = transaction.amount.12, y = transaction.count.12, 
                  color = churn),
              size = 0.2, alpha = 0.7) +
-  labs(x = "Transaction Amount",
-       y = "Total Transaction Count (12 months)",
-       color = "Churn")
+  labs(x = "Transaction Amount", y = "Total Transaction Count (12 months)")
 ```
 
 The scatter plot shows a clear positive association: customers who spend more also tend to make more transactions. Most observations fall along a broad diagonal region of moderate spending and transaction counts. Within this region, churners and non-churners overlap, although some areas appear to contain a higher proportion of churned accounts.
 
 To make this clearer, we focus on two illustrative regions: customers with very low spending and those with moderate spending but relatively few transactions. These regions are extracted using the `subset()` function as follows:
 
-```{r out.width = "50%"}
+```{r out.width = "45%"}
 sub_churnCredit = subset(
   churnCredit,
   (transaction.amount.12 < 1000) |
@@ -743,8 +746,7 @@ ggplot(data = sub_churnCredit,
        aes(x = churn, 
            label = scales::percent(prop.table(after_stat(count))))) +
   geom_bar(fill = c("#F4A582", "#A8D5BA")) + 
-  geom_text(stat = "count", vjust = 0.4, size = 8) +
-  labs(x = "Churn", y = "Count")
+  geom_text(stat = "count", vjust = 0.4, size = 8) 
 ```
 
 Within this subset, the proportion of churners is noticeably higher than in the full dataset. These patterns suggest that low or inconsistent card usage (particularly when combined with infrequent transactions) is associated with an increased likelihood of churn.
@@ -782,18 +784,16 @@ Age is an important demographic factor that often shapes financial behaviour, sp
 #| fig-height: 4
 
 # Total Transaction Amount by Age
-ggplot(data = churnCredit, aes(x = age, y = transaction.amount.12, color = churn)) +
+ggplot(data = churnCredit, 
+       aes(x = age, y = transaction.amount.12, color = churn)) +
   geom_smooth(se = FALSE, linewidth = 1.1, alpha = 0.9) +
-  labs(x = "Customer Age", 
-       y = "Total Transaction Amount (12 months)",
-       color = "Churn") 
+  labs(x = "Customer Age", y = "Total Transaction Amount (12 months)") 
 
 # Total Transaction Count by Age
-ggplot(data = churnCredit, aes(x = age, y = transaction.count.12, color = churn)) +
+ggplot(data = churnCredit, 
+       aes(x = age, y = transaction.count.12, color = churn)) +
   geom_smooth(se = FALSE, linewidth = 1.1, alpha = 0.9) +
-  labs(x = "Customer Age", 
-       y = "Total Transaction Count (12 months)",
-       color = "Churn") 
+  labs(x = "Customer Age", y = "Total Transaction Count (12 months)") 
 ```
 
 The smooth curves indicate that transaction activity gradually declines with age. Younger customers tend to make more transactions and spend larger amounts, whereas older customers show lower and more stable activity levels. There is also a small indication that churn is slightly more common among younger, highly active customers, although this difference is not large.
@@ -848,7 +848,7 @@ First, graphical and numerical summaries should be used together to obtain compl
 Second, careful attention to data quality, including missing values and redundant variables, is essential for reliable analysis.
 Third, EDA is not only descriptive: it provides direction for statistical inference and predictive modelling by revealing patterns worth investigating further.
 
-The results of this chapter form the empirical foundation for the next stage of the analysis. Chapter [-@sec-ch5-inference] introduces the tools of statistical inference, which allow us to formalise uncertainty, quantify relationships, and test hypotheses suggested by the exploratory findings.
+The results of this chapter form the empirical foundation for the next stage of the analysis. Chapter [-@sec-ch5-statistics] introduces the tools of statistical inference, which allow us to formalise uncertainty, quantify relationships, and test hypotheses suggested by the exploratory findings.
 
 ## Exercises {#sec-ch4-exercises}
 
