--- a/5-Statistics.qmd
+++ b/5-Statistics.qmd
@@ -12,13 +12,15 @@ Statistics is the science of uncertainty.
 \end{chapterquote}
 :::
 
-::: {.content-visible when-format="html"}
-::: {.chapterquote}
+::::: {.content-visible when-format="html"}
+:::: chapterquote
 Statistics is the science of uncertainty.
 
-<div class="author">— Dennis Lindley</div>
+::: author
+— Dennis Lindley
 :::
-:::
+::::
+:::::
 
 Imagine a bank notices that customers who contact customer service frequently appear more likely to close their credit card accounts. Is this pattern evidence of a genuine underlying relationship, or could it simply reflect random variation in the data? Questions like these lie at the heart of statistical inference.
 
@@ -116,16 +118,13 @@ Suppose the exploratory analysis in the *churnCredit* dataset suggests that chur
 
 Confidence intervals quantify the uncertainty associated with estimates of population parameters. Rather than reporting only a point estimate, such as “the average annual transaction amount for churners is \$3,900,” a confidence interval might state that “we are 95 percent confident that the true average lies between \$3,780 and \$4,020.” This range incorporates the natural sampling variation present whenever we work with data from a subset rather than an entire population.
 
-Formally, a confidence interval combines a point estimate (such as a sample mean or proportion) with a margin of error that reflects expected sampling variability. The general form is:
-$$
+Formally, a confidence interval combines a point estimate (such as a sample mean or proportion) with a margin of error that reflects expected sampling variability. The general form is: $$
 \text{Point Estimate} \pm \text{Margin of Error}.
 $$
 
-For a population mean, the confidence interval is often calculated using:
-$$
+For a population mean, the confidence interval is often calculated using: $$
 \bar{x} \pm z_{\alpha/2}\left(\frac{s}{\sqrt{n}}\right),
-$$
-where $\bar{x}$ is the sample mean, $s$ the sample standard deviation, $n$ the sample size, and $z_{\alpha/2}$ the critical value from the standard normal distribution (for example, 1.96 for a 95 percent confidence level).
+$$ where $\bar{x}$ is the sample mean, $s$ the sample standard deviation, $n$ the sample size, and $z_{\alpha/2}$ the critical value from the standard normal distribution (for example, 1.96 for a 95 percent confidence level).
 
 ```{r fig-confidence-interval, echo = FALSE, out.width = "70%", fig.cap = "Confidence interval for a population mean. The interval is centered around the point estimate, with its width determined by the margin of error. The confidence level specifies the long-run proportion of such intervals that contain the true parameter."}
 knitr::include_graphics("images/ch5_confidence_interval.png")
@@ -177,9 +176,9 @@ knitr::include_graphics("images/ch5_hypothesis_testing.png")
 
 The framework is built around two competing statements:
 
-* The null hypothesis ($H_0$): the default assumption that there is no effect, difference, or association.
+-   The null hypothesis ($H_0$): the default assumption that there is no effect, difference, or association.
 
-* The alternative hypothesis ($H_a$): the competing claim that an effect or difference does exist.
+-   The alternative hypothesis ($H_a$): the competing claim that an effect or difference does exist.
 
 To assess the strength of evidence against $H_0$, we calculate a p-value: the probability of obtaining results at least as extreme as those observed, assuming $H_0$ is true. Small p-values indicate stronger evidence against $H_0$. We compare the p-value to a chosen significance level $\alpha$ (typically 0.05) to decide whether the evidence is strong enough to reject the null hypothesis.
 
@@ -192,10 +191,10 @@ For example, if $p = 0.03$ and $\alpha = 0.05$, the evidence is considered suffi
 A useful way to understand this logic is to consider the analogy of a criminal trial: the null hypothesis represents the presumption of innocence, the alternative hypothesis represents guilt, and the jury must decide whether the evidence is strong enough to overturn the presumption of innocence. Just as legal verdicts can result in mistakes, hypothesis testing is subject to two types of error, summarised in Table @tbl-hypothesis-errors.
 
 ::: {#tbl-hypothesis-errors .table}
-| Decision            | Reality: $H_0$ is True                                 | Reality: $H_0$ is False                            |
-|---------------------|--------------------------------------------------------|----------------------------------------------------|
-| Do not Reject $H_0$ | *Correct Decision*: Acquit an innocent person.         | *Type II Error (*$\beta$): Acquit a guilty person. |
-| Reject $H_0$        | *Type I Error (*$\alpha$): Convict an innocent person. | *Correct Decision*: Convict a guilty person.       |
+| Decision | Reality: $H_0$ is True | Reality: $H_0$ is False |
+|----------------|-----------------------------|---------------------------|
+| Do not Reject $H_0$ | *Correct Decision*: Acquit an innocent person. | *Type II Error (*$\beta$): Acquit a guilty person. |
+| Reject $H_0$ | *Type I Error (*$\alpha$): Convict an innocent person. | *Correct Decision*: Convict a guilty person. |
 
 Possible outcomes of hypothesis testing, with two correct decisions and two types of error.
 :::
@@ -208,25 +207,24 @@ Questions such as whether a new marketing campaign increases conversion rates or
 
 The form of the hypothesis test depends on the research question and the direction of the effect being evaluated. Depending on how the alternative hypothesis is specified, tests generally take one of the following forms:
 
-* *Two-tailed test*: the alternative hypothesis states that the parameter is not equal to a specified value ($H_a: \theta \neq \theta_0$). For example, testing whether the mean annual transaction amount differs from $4,000.
+-   *Two-tailed test*: the alternative hypothesis states that the parameter is not equal to a specified value ($H_a: \theta \neq \theta_0$). For example, testing whether the mean annual transaction amount differs from \$4,000.
 
-* *Right-tailed test*: the alternative hypothesis asserts that the parameter is greater than a specified value ($H_a: \theta > \theta_0$). For instance, testing whether the churn rate exceeds 30%.
+-   *Right-tailed test*: the alternative hypothesis asserts that the parameter is greater than a specified value ($H_a: \theta > \theta_0$). For instance, testing whether the churn rate exceeds 30%.
 
-* *Left-tailed test*: the alternative hypothesis proposes that the parameter is less than a specified value ($H_a: \theta < \theta_0$). An example is testing whether the average number of months on book is less than 24 months.
+-   *Left-tailed test*: the alternative hypothesis proposes that the parameter is less than a specified value ($H_a: \theta < \theta_0$). An example is testing whether the average number of months on book is less than 24 months.
 
 Once the hypotheses are formulated, the next step is to select the statistical test that matches the data type and the research question. Many learners find this step challenging, especially when deciding between numerical and categorical outcomes or comparing one group with several. Table @tbl-hypothesis-test summarises commonly used hypothesis tests, their null hypotheses, and the types of variables they apply to. This table is introduced in lectures and appears throughout the book as a reference.
 
 ::: {#tbl-hypothesis-test .table}
-
-| Test                         | Null Hypothesis ($H_0$)      | Applied To                                    |
-| ---------------------------- | ---------------------------- | --------------------------------------------- |
-| One-sample t-test            | $H_0: \mu = \mu_0$           | Single numerical variable                     |
-| Test for Proportion          | $H_0: \pi = \pi_0$           | Single categorical variable                   |
-| Two-sample t-test            | $H_0: \mu_1 = \mu_2$         | Numerical outcome by binary group             |
-| Two-proportion Z-test        | $H_0: \pi_1 = \pi_2$         | Two binary categorical variables              |
-| Chi-square Test              | $H_0: \pi_1 = \pi_2 = \pi_3$ | Two categorical variables with > 2 categories |
-| Analysis of Variance (ANOVA) | $H_0: \mu_1 = \mu_2 = \mu_3$ | Numerical outcome by multi-level group        |
-| Correlation Test             | $H_0: \rho = 0$              | Two numerical variables                       |
+| Test | Null Hypothesis ($H_0$) | Applied To |
+|--------------------|--------------------|--------------------------------|
+| One-sample t-test | $H_0: \mu = \mu_0$ | Single numerical variable |
+| Test for Proportion | $H_0: \pi = \pi_0$ | Single categorical variable |
+| Two-sample t-test | $H_0: \mu_1 = \mu_2$ | Numerical outcome by binary group |
+| Two-proportion Z-test | $H_0: \pi_1 = \pi_2$ | Two binary categorical variables |
+| Chi-square Test | $H_0: \pi_1 = \pi_2 = \pi_3$ | Two categorical variables with \> 2 categories |
+| Analysis of Variance (ANOVA) | $H_0: \mu_1 = \mu_2 = \mu_3$ | Numerical outcome by multi-level group |
+| Correlation Test | $H_0: \rho = 0$ | Two numerical variables |
 
 Common hypothesis tests, their null hypotheses, and the types of variables they apply to.
 :::
@@ -241,35 +239,31 @@ The one-sample t-test assesses whether the mean of a numerical variable in a pop
 
 The hypotheses depend on the aim of the analysis:
 
-* *Two-tailed test*:
-  $$
-  \begin{cases}
-  H_0: \mu = \mu_0 \\
-  H_a: \mu \neq \mu_0
-  \end{cases}
-  $$
+-   *Two-tailed test*: $$
+    \begin{cases}
+    H_0: \mu = \mu_0 \\
+    H_a: \mu \neq \mu_0
+    \end{cases}
+    $$
 
-* *Left-tailed test*:
-  $$
-  \begin{cases}
-  H_0: \mu \geq \mu_0 \\
-  H_a: \mu < \mu_0
-  \end{cases}
-  $$
+-   *Left-tailed test*: $$
+    \begin{cases}
+    H_0: \mu \geq \mu_0 \\
+    H_a: \mu < \mu_0
+    \end{cases}
+    $$
 
-* *Right-tailed test*:
-  $$
-  \begin{cases}
-  H_0: \mu \leq \mu_0 \\
-  H_a: \mu > \mu_0
-  \end{cases}
-  $$
+-   *Right-tailed test*: $$
+    \begin{cases}
+    H_0: \mu \leq \mu_0 \\
+    H_a: \mu > \mu_0
+    \end{cases}
+    $$
 
 Before turning to an example, it is helpful to link this test to the *churnCredit* dataset. In earlier exploratory analysis, we observed that the tenure variable `months.on.book` differs between churners and non-churners and plays an important role in retention behaviour. This makes it a natural choice for illustrating the one-sample t-test and for assessing whether the average tenure of churned customers aligns with a commonly used benchmark.
 
 ::: {#ex-one-sample-test .example}
-**Example:** Suppose we want to test whether the average account tenure of churned customers differs from the benchmark of 36 months at the 5 percent significance level ($\alpha = 0.05$). The hypotheses are:
-$$
+**Example:** Suppose we want to test whether the average account tenure of churned customers differs from the benchmark of 36 months at the 5 percent significance level ($\alpha = 0.05$). The hypotheses are: $$
 \begin{cases}
 H_0: \mu = 36 \\
 H_a: \mu \neq 36
@@ -291,15 +285,14 @@ t_test
 
 The output includes the test statistic, the *p*-value, the confidence interval, and the degrees of freedom. The *p*-value is `r round(t_test$p.value, 2)`, which is greater than $\alpha = 0.05$. We therefore do not reject the null hypothesis and conclude that the average tenure is not statistically different from 36 months.
 
-The 95 percent confidence interval is
-(`r round(t_test$conf.int[1], 2)`, `r round(t_test$conf.int[2], 2)`), which includes 36. This is consistent with the decision not to reject $H_0$. The sample mean is `r round(t_test$estimate, 2)`, which serves as a point estimate of the population mean.
+The 95 percent confidence interval is (`r round(t_test$conf.int[1], 2)`, `r round(t_test$conf.int[2], 2)`), which includes 36. This is consistent with the decision not to reject $H_0$. The sample mean is `r round(t_test$estimate, 2)`, which serves as a point estimate of the population mean.
 
 Because the population standard deviation is unknown, the test statistic follows a t-distribution with $n - 1$ degrees of freedom.
 :::
 
 > *Try it yourself:* Test whether the average account tenure of churned customers is less than 36 months. Set up a left-tailed test using `t.test(churned_customers$months.on.book, mu = 36, alternative = "less")`.
 
-> *Try it yourself:* Use a one-sample t-test to assess whether the average annual transaction amount (`transaction.amount.12`) among churned customers differs from $4,000.
+> *Try it yourself:* Use a one-sample t-test to assess whether the average annual transaction amount (`transaction.amount.12`) among churned customers differs from \$4,000.
 
 The one-sample t-test is a useful method for comparing a sample mean with a fixed reference value. While statistical significance helps determine whether a difference is unlikely to be due to chance, practical relevance is equally important. A small difference in average tenure may be negligible, whereas a difference of several months may have clear implications for retention policies. By combining statistical reasoning with business understanding, the one-sample t-test supports meaningful, evidence-based decision-making.
 
@@ -310,8 +303,7 @@ Suppose a bank believes that 15 percent of its credit card customers churn each 
 A proportion test evaluates whether the population proportion ($\pi$) of a particular category is equal to a hypothesised value ($\pi_0$). It is most appropriate when analysing binary categorical variables, such as service subscription, default status, or churn. The `prop.test()` function in R implements this test and can be used either for a single proportion or for comparing two proportions.
 
 ::: {#ex-test-proportion .example}
-**Example:** A bank assumes that 15 percent of its customers churn. To evaluate whether the churn rate in the *churnCredit* dataset differs from this expectation, we set up the following hypotheses:
-$$
+**Example:** A bank assumes that 15 percent of its customers churn. To evaluate whether the churn rate in the *churnCredit* dataset differs from this expectation, we set up the following hypotheses: $$
 \begin{cases}
 H_0: \pi = 0.15 \\ 
 H_a: \pi \neq 0.15
@@ -377,8 +369,7 @@ t_test_credit
 
 The output includes the test statistic, *p*-value, degrees of freedom, confidence interval, and estimated group means. The *p*-value is `r round(t_test_credit$p.value, 4)`, which is smaller than the standard significance level $\alpha = 0.05$. We therefore reject $H_0$ and conclude that the average credit limits differ between churners and non-churners.
 
-The 95 percent confidence interval for the difference in means is
-(`r round(t_test_credit$conf.int[1], 3)`, `r round(t_test_credit$conf.int[2], 3)`), and because zero is not contained in this interval, the result is consistent with rejecting the null hypothesis. The estimated group means are `r round(t_test_credit$estimate[1], 2)` for churners and `r round(t_test_credit$estimate[2], 2)` for non-churners, indicating that churners tend to have lower credit limits.
+The 95 percent confidence interval for the difference in means is (`r round(t_test_credit$conf.int[1], 3)`, `r round(t_test_credit$conf.int[2], 3)`), and because zero is not contained in this interval, the result is consistent with rejecting the null hypothesis. The estimated group means are `r round(t_test_credit$estimate[1], 2)` for churners and `r round(t_test_credit$estimate[2], 2)` for non-churners, indicating that churners tend to have lower credit limits.
 
 > *Try it yourself:* Test whether the average tenure (`months.on.book`) differs between churners and non-churners using `t.test(months.on.book ~ churn, data = churnCredit)`. Visualisations for this variable appear in Section [-@sec-EDA-sec-numeric].
 
@@ -394,7 +385,7 @@ Do male and female customers churn at different rates? If so, could gender-based
 
 Whereas the two-sample t-test compares means of numerical variables, the Z-test evaluates whether the difference between two population proportions is statistically significant or could plausibly be attributed to sampling variability. This makes it especially useful when analysing binary categorical outcomes.
 
-In Chapter [-@sec-ch4-EDA], Section [-@sec-chapter-EDA-categorical], we examined churn patterns across demographic groups, including *gender*. Bar plots suggested that churn rates may differ between male and female customers. The two-sample Z-test allows us to formally evaluate whether these observed differences are statistically meaningful.
+In Chapter [-@sec-ch4-EDA], Section [-@sec-EDA-categorical], we examined churn patterns across demographic groups, including *gender*. Bar plots suggested that churn rates may differ between male and female customers. The two-sample Z-test allows us to formally evaluate whether these observed differences are statistically meaningful.
 
 ```{r echo = FALSE, out.width = "100%"}
 #| layout-ncol: 2
@@ -444,13 +435,11 @@ z_test_gender
 
 The output includes the *p*-value, a confidence interval for the difference in proportions, and the estimated churn proportions for each gender. The *p*-value is `r round(z_test_gender$p.value, 3)`, which is less than the significance level $\alpha = 0.05$. We therefore reject $H_0$ and conclude that the churn rate differs between male and female customers.
 
-The 95 percent confidence interval for the difference in proportions is
-(`r round(z_test_gender$conf.int[1], 3)`, `r round(z_test_gender$conf.int[2], 3)`).
-Because this interval does not contain zero, it supports the conclusion that the proportions are statistically different. The estimated churn proportions are `r round(z_test_gender$estimate[1], 3)` for male customers and `r round(z_test_gender$estimate[2], 3)` for female customers, indicating the direction and magnitude of the difference.
+The 95 percent confidence interval for the difference in proportions is (`r round(z_test_gender$conf.int[1], 3)`, `r round(z_test_gender$conf.int[2], 3)`). Because this interval does not contain zero, it supports the conclusion that the proportions are statistically different. The estimated churn proportions are `r round(z_test_gender$estimate[1], 3)` for male customers and `r round(z_test_gender$estimate[2], 3)` for female customers, indicating the direction and magnitude of the difference.
 
 From a business perspective, differences in churn rates across demographic groups may reflect differences in service expectations, product usage patterns, or engagement levels. However, as always, statistical significance does not guarantee practical relevance. Even if one gender group shows a higher churn rate, the size of the difference should be interpreted in context before informing retention strategies.
 
-> *Try it yourself:* Test whether the proportion of churned customers is higher among female customers than among male customers. Follow the same steps af above and set up a right-tailed two-sample Z-test by specifying `alternative = "greater"` in the `prop.test()` function. 
+> *Try it yourself:* Test whether the proportion of churned customers is higher among female customers than among male customers. Follow the same steps af above and set up a right-tailed two-sample Z-test by specifying `alternative = "greater"` in the `prop.test()` function.
 
 The two-sample Z-test complements visual exploration and provides a rigorous method for comparing proportions. By integrating statistical inference with domain knowledge, organisations can make informed decisions about customer segmentation and retention strategies.
 
@@ -460,7 +449,7 @@ Does customer churn vary across marital groups? And if so, does marital status r
 
 While earlier tests compared means or proportions between two groups, the Chi-square test examines whether the distribution of outcomes across several categories deviates from what would be expected if the variables were independent. It is particularly useful for demographic segmentation and behavioural analysis when one or both variables have more than two levels.
 
-To illustrate the method, we revisit the *churnCredit* dataset. In Chapter [-@sec-ch4-EDA], Section [-@sec-chapter-EDA-categorical], we explored churn rates across the marital categories “single”, “married”, and “divorced”. As in that chapter, we use the cleaned version of the dataset, where “unknown” marital values were removed during the data preparation step. Visualisations suggested possible differences across groups, but a formal statistical test is required to determine whether these differences are statistically meaningful.
+To illustrate the method, we revisit the *churnCredit* dataset. In Chapter [-@sec-ch4-EDA], Section [-@sec-EDA-categorical], we explored churn rates across the marital categories “single”, “married”, and “divorced”. As in that chapter, we use the cleaned version of the dataset, where “unknown” marital values were removed during the data preparation step. Visualisations suggested possible differences across groups, but a formal statistical test is required to determine whether these differences are statistically meaningful.
 
 We begin by visualising churn across marital groups:
 
@@ -496,8 +485,7 @@ table_marital <- table(churnCredit$churn, churnCredit$marital,
 table_marital
 ```
 
-This table serves as the input to the `chisq.test()` function, which assesses whether two categorical variables are independent. The hypotheses are:
-$$
+This table serves as the input to the `chisq.test()` function, which assesses whether two categorical variables are independent. The hypotheses are: $$
 \begin{cases}
 H_0: \pi_{divorced, \ yes} = \pi_{married, \ yes} = \pi_{single, \ yes} \quad \text{(All proportions are equal);} \\
 H_a: \text{At least one proportion differs.}
@@ -523,7 +511,7 @@ A general rule is that all expected cell counts should be at least 5. When expec
 
 Even when the test does not detect an association, it can still be helpful to examine which categories deviate most from the expected counts. Identifying whether certain marital groups churn slightly more or less than expected may point toward behavioural patterns worth exploring in further modelling or segmentation analysis.
 
-> *Try it yourself:* Test whether education level is associated with churn in the *churnCredit* dataset. Follow the same steps as above. For more information on the `education` variable, see Section [-@sec-EDA-sec-categorical] in Chapter [-@sec-ch4-EDA].
+> *Try it yourself:* Test whether education level is associated with churn in the *churnCredit* dataset. Follow the same steps as above. For more information on the `education` variable, see Section [-@sec-EDA-categorical] in Chapter [-@sec-ch4-EDA].
 
 The Chi-square test therefore complements exploratory visualisation by providing a formal statistical framework for analysing associations between categorical variables. Combined with domain expertise, it supports data-informed decisions about customer segmentation and engagement strategies.
 
@@ -545,8 +533,7 @@ ggplot(data = diamonds) +
 
 The boxplot shows clear differences in the distribution and median prices across cut categories. Visual inspection, however, cannot determine whether these observed differences are statistically significant. ANOVA provides the formal test needed to make this determination.
 
-We evaluate whether cut quality affects diamond price by comparing the mean price across all five categories. Our hypotheses are:
-$$
+We evaluate whether cut quality affects diamond price by comparing the mean price across all five categories. Our hypotheses are: $$
 \begin{cases}
 H_0: \mu_1 = \mu_2 = \mu_3 = \mu_4 = \mu_5 \quad \text{(All group means are equal);} \\
 H_a: \text{At least one group mean differs.}
@@ -568,12 +555,6 @@ From a business perspective, understanding differences in price across cut level
 
 > *Try it yourself:* Use ANOVA to test whether the average carat (`carat`) differs across clarity levels (`clarity`) in the *diamonds* dataset. Fit the model using `aov(carat ~ clarity, data = diamonds)` and examine the ANOVA output. For a visual comparison, create a boxplot similar to the one used for cut quality.
 
-
-
-
-
-
-
 ## Correlation Test {#sec-ch5-correlation-test}
 
 Suppose you are analysing sales data and notice that as advertising spend increases, product sales tend to rise as well. Is this trend real, or merely coincidental? In exploratory analysis (see Section [-@sec-ch4-EDA-correlation]), we used scatter plots and correlation matrices to visually assess such relationships. The next step is to evaluate whether the observed association is statistically meaningful. The correlation test provides a formal method for determining whether a linear relationship between two numerical variables is stronger than what we would expect by random chance.
@@ -588,8 +569,7 @@ ggplot(diamonds, aes(x = carat, y = price)) +
   labs(x = "Diamond Weight (Carats)", y = "Price (USD)")
 ```
 
-The plot clearly shows an upward trend, suggesting a positive association. However, visual inspection does not provide formal evidence. To test the linear relationship, we set up the following hypotheses:
-$$
+The plot clearly shows an upward trend, suggesting a positive association. However, visual inspection does not provide formal evidence. To test the linear relationship, we set up the following hypotheses: $$
 \begin{cases}
 H_0: \rho = 0 \quad \text{(No linear correlation)} \\
 H_a: \rho \neq 0 \quad \text{(A significant linear correlation exists)}
