--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,11 @@
-@book{pearl2018book,
+@book{bischl2024applied,
+  title={Applied machine learning using mlr3 in R},
+  author={Bischl, Bernd and Sonabend, Raphael and Kotthoff, Lars and Lang, Michel},
+  year={2024},
+  publisher={CRC Press}
+}
+
+book{pearl2018book,
   title = {The Book of Why: The New Science of Cause and Effect},
   author = {Pearl, Judea and Mackenzie, Dana},
   year = {2018},
